150070001-150070018/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> master
Rule 1     master -> program
Rule 2     program -> function
Rule 3     program -> function program
Rule 4     program -> declaration program
Rule 5     program -> prototype program
Rule 6     prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON
Rule 7     prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON
Rule 8     function -> TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
Rule 9     function -> TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
Rule 10    paramlist -> <empty>
Rule 11    paramlist -> TYPE NAME paramlist2
Rule 12    paramlist -> TYPE specialvar paramlist2
Rule 13    paramlist2 -> <empty>
Rule 14    paramlist2 -> COMMA TYPE NAME paramlist2
Rule 15    paramlist2 -> COMMA TYPE specialvar paramlist2
Rule 16    fbody -> allstatement fbody
Rule 17    fbody -> <empty>
Rule 18    allstatement -> statement
Rule 19    allstatement -> unmatchedstatement
Rule 20    statement -> assignment
Rule 21    statement -> declaration
Rule 22    statement -> whileblock
Rule 23    statement -> ifblock
Rule 24    statement -> returnstatement
Rule 25    statement -> functioncall SEMICOLON
Rule 26    returnstatement -> RETURN expression SEMICOLON
Rule 27    returnstatement -> RETURN SEMICOLON
Rule 28    functioncall -> NAME LPAREN arguments RPAREN
Rule 29    arguments -> expression
Rule 30    arguments -> expression COMMA arguments
Rule 31    statement -> SEMICOLON
Rule 32    unmatchedstatement -> IF LPAREN conditional RPAREN allstatement
Rule 33    unmatchedstatement -> IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
Rule 34    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
Rule 35    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 36    ifblock -> IF LPAREN conditional RPAREN statement ELSE statement
Rule 37    ifblock -> IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
Rule 38    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
Rule 39    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
Rule 40    whileblock -> WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 41    conditional -> LPAREN conditional RPAREN
Rule 42    conditional -> conditionbase
Rule 43    conditional -> NOT LPAREN conditional RPAREN
Rule 44    conditional -> conditional LESSTHANEQ conditional
Rule 45    conditional -> conditional GREATERTHANEQ conditional
Rule 46    conditional -> conditional UNEQUAL conditional
Rule 47    conditional -> conditional EQUALCHECK conditional
Rule 48    conditional -> conditional LESSTHAN conditional
Rule 49    conditional -> conditional GREATERTHAN conditional
Rule 50    conditional -> conditional ANDOPERATOR conditional
Rule 51    conditional -> conditional OROPERATOR conditional
Rule 52    conditionbase -> CS LESSTHANEQ CS
Rule 53    conditionbase -> CS GREATERTHANEQ CS
Rule 54    conditionbase -> CS UNEQUAL CS
Rule 55    conditionbase -> CS EQUALCHECK CS
Rule 56    conditionbase -> CS LESSTHAN CS
Rule 57    conditionbase -> CS GREATERTHAN CS
Rule 58    CS -> expression
Rule 59    CS -> NOT LPAREN expression RPAREN
Rule 60    declaration -> TYPE dlist1 SEMICOLON
Rule 61    dlist1 -> NAME
Rule 62    dlist1 -> NAME COMMA dlist1
Rule 63    dlist1 -> specialvar
Rule 64    dlist1 -> specialvar COMMA dlist1
Rule 65    specialvar -> TIMES specialvar
Rule 66    specialvar -> TIMES NAME
Rule 67    assignment -> assignment_base SEMICOLON
Rule 68    assignment_base -> TIMES pointervar EQUALS expression
Rule 69    assignment_base -> NAME EQUALS expression
Rule 70    expression -> functioncall
Rule 71    expression -> expression PLUS expression
Rule 72    expression -> expression MINUS expression
Rule 73    expression -> expression DIVIDE expression
Rule 74    expression -> expression TIMES expression
Rule 75    expression -> MINUS expression
Rule 76    expression -> LPAREN expression RPAREN
Rule 77    expression -> allnumbers
Rule 78    allnumbers -> FLOAT
Rule 79    allnumbers -> NUMBER
Rule 80    expression -> pointervar
Rule 81    pointervar -> TIMES pointervar
Rule 82    pointervar -> ADDROF pointervar
Rule 83    pointervar -> NAME

Terminals, with rules where they appear

ADDROF               : 82
ANDOPERATOR          : 50
COMMA                : 14 15 30 62 64
DIVIDE               : 73
ELSE                 : 33 34 36 37 38 39
EQUALCHECK           : 47 55
EQUALS               : 68 69
FLOAT                : 78
GREATERTHAN          : 49 57
GREATERTHANEQ        : 45 53
IF                   : 32 33 34 35 36 37 38 39
LBRACE               : 8 9 34 35 37 38 38 39 40
LESSTHAN             : 48 56
LESSTHANEQ           : 44 52
LPAREN               : 6 7 8 9 28 32 33 34 35 36 37 38 39 40 41 43 59 76
MINUS                : 72 75
NAME                 : 6 8 11 14 28 61 62 66 69 83
NOT                  : 43 59
NUMBER               : 79
OROPERATOR           : 51
PLUS                 : 71
RBRACE               : 8 9 34 35 37 38 38 39 40
RETURN               : 26 27
RPAREN               : 6 7 8 9 28 32 33 34 35 36 37 38 39 40 41 43 59 76
SEMICOLON            : 6 7 25 26 27 31 60 67
TIMES                : 65 66 68 74 81
TYPE                 : 6 7 8 9 11 12 14 15 60
UNEQUAL              : 46 54
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

CS                   : 52 52 53 53 54 54 55 55 56 56 57 57
allnumbers           : 77
allstatement         : 16 32
arguments            : 28 30
assignment           : 20
assignment_base      : 67
conditional          : 32 33 34 35 36 37 38 39 40 41 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51
conditionbase        : 42
declaration          : 4 21
dlist1               : 60 62 64
expression           : 26 29 30 58 59 68 69 71 71 72 72 73 73 74 74 75 76
fbody                : 8 9 16 34 35 37 38 38 39 40
function             : 2 3
functioncall         : 25 70
ifblock              : 23
master               : 0
paramlist            : 6 7 8 9
paramlist2           : 11 12 14 15
pointervar           : 68 80 81 82
program              : 1 3 4 5
prototype            : 5
returnstatement      : 24
specialvar           : 7 9 12 15 63 64 65
statement            : 18 33 36 36 37 39
unmatchedstatement   : 19 33 34
whileblock           : 22

Parsing method: LALR

state 0

    (0) S' -> . master
    (1) master -> . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (8) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (9) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 6

    function                       shift and go to state 1
    program                        shift and go to state 2
    master                         shift and go to state 3
    declaration                    shift and go to state 4
    prototype                      shift and go to state 5

state 1

    (2) program -> function .
    (3) program -> function . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (8) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (9) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    $end            reduce using rule 2 (program -> function .)
    TYPE            shift and go to state 6

    function                       shift and go to state 1
    declaration                    shift and go to state 4
    program                        shift and go to state 7
    prototype                      shift and go to state 5

state 2

    (1) master -> program .

    $end            reduce using rule 1 (master -> program .)


state 3

    (0) S' -> master .



state 4

    (4) program -> declaration . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (8) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (9) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 6

    function                       shift and go to state 1
    declaration                    shift and go to state 4
    program                        shift and go to state 8
    prototype                      shift and go to state 5

state 5

    (5) program -> prototype . program
    (2) program -> . function
    (3) program -> . function program
    (4) program -> . declaration program
    (5) program -> . prototype program
    (8) function -> . TYPE NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (9) function -> . TYPE specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (6) prototype -> . TYPE NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> . TYPE specialvar LPAREN paramlist RPAREN SEMICOLON

    TYPE            shift and go to state 6

    function                       shift and go to state 1
    declaration                    shift and go to state 4
    program                        shift and go to state 9
    prototype                      shift and go to state 5

state 6

    (8) function -> TYPE . NAME LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (9) function -> TYPE . specialvar LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (60) declaration -> TYPE . dlist1 SEMICOLON
    (6) prototype -> TYPE . NAME LPAREN paramlist RPAREN SEMICOLON
    (7) prototype -> TYPE . specialvar LPAREN paramlist RPAREN SEMICOLON
    (65) specialvar -> . TIMES specialvar
    (66) specialvar -> . TIMES NAME
    (61) dlist1 -> . NAME
    (62) dlist1 -> . NAME COMMA dlist1
    (63) dlist1 -> . specialvar
    (64) dlist1 -> . specialvar COMMA dlist1

    NAME            shift and go to state 10
    TIMES           shift and go to state 11

    specialvar                     shift and go to state 13
    dlist1                         shift and go to state 12

state 7

    (3) program -> function program .

    $end            reduce using rule 3 (program -> function program .)


state 8

    (4) program -> declaration program .

    $end            reduce using rule 4 (program -> declaration program .)


state 9

    (5) program -> prototype program .

    $end            reduce using rule 5 (program -> prototype program .)


state 10

    (8) function -> TYPE NAME . LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME . LPAREN paramlist RPAREN SEMICOLON
    (61) dlist1 -> NAME .
    (62) dlist1 -> NAME . COMMA dlist1

    LPAREN          shift and go to state 15
    SEMICOLON       reduce using rule 61 (dlist1 -> NAME .)
    COMMA           shift and go to state 14


state 11

    (65) specialvar -> TIMES . specialvar
    (66) specialvar -> TIMES . NAME
    (65) specialvar -> . TIMES specialvar
    (66) specialvar -> . TIMES NAME

    NAME            shift and go to state 17
    TIMES           shift and go to state 11

    specialvar                     shift and go to state 16

state 12

    (60) declaration -> TYPE dlist1 . SEMICOLON

    SEMICOLON       shift and go to state 18


state 13

    (9) function -> TYPE specialvar . LPAREN paramlist RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar . LPAREN paramlist RPAREN SEMICOLON
    (63) dlist1 -> specialvar .
    (64) dlist1 -> specialvar . COMMA dlist1

    LPAREN          shift and go to state 19
    SEMICOLON       reduce using rule 63 (dlist1 -> specialvar .)
    COMMA           shift and go to state 20


state 14

    (62) dlist1 -> NAME COMMA . dlist1
    (61) dlist1 -> . NAME
    (62) dlist1 -> . NAME COMMA dlist1
    (63) dlist1 -> . specialvar
    (64) dlist1 -> . specialvar COMMA dlist1
    (65) specialvar -> . TIMES specialvar
    (66) specialvar -> . TIMES NAME

    NAME            shift and go to state 23
    TIMES           shift and go to state 11

    specialvar                     shift and go to state 21
    dlist1                         shift and go to state 22

state 15

    (8) function -> TYPE NAME LPAREN . paramlist RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN . paramlist RPAREN SEMICOLON
    (10) paramlist -> .
    (11) paramlist -> . TYPE NAME paramlist2
    (12) paramlist -> . TYPE specialvar paramlist2

    RPAREN          reduce using rule 10 (paramlist -> .)
    TYPE            shift and go to state 25

    paramlist                      shift and go to state 24

state 16

    (65) specialvar -> TIMES specialvar .

    COMMA           reduce using rule 65 (specialvar -> TIMES specialvar .)
    RPAREN          reduce using rule 65 (specialvar -> TIMES specialvar .)
    SEMICOLON       reduce using rule 65 (specialvar -> TIMES specialvar .)
    LPAREN          reduce using rule 65 (specialvar -> TIMES specialvar .)


state 17

    (66) specialvar -> TIMES NAME .

    COMMA           reduce using rule 66 (specialvar -> TIMES NAME .)
    RPAREN          reduce using rule 66 (specialvar -> TIMES NAME .)
    SEMICOLON       reduce using rule 66 (specialvar -> TIMES NAME .)
    LPAREN          reduce using rule 66 (specialvar -> TIMES NAME .)


state 18

    (60) declaration -> TYPE dlist1 SEMICOLON .

    SEMICOLON       reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    IF              reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    TYPE            reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    WHILE           reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    RETURN          reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    NAME            reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    TIMES           reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    RBRACE          reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)
    ELSE            reduce using rule 60 (declaration -> TYPE dlist1 SEMICOLON .)


state 19

    (9) function -> TYPE specialvar LPAREN . paramlist RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN . paramlist RPAREN SEMICOLON
    (10) paramlist -> .
    (11) paramlist -> . TYPE NAME paramlist2
    (12) paramlist -> . TYPE specialvar paramlist2

    RPAREN          reduce using rule 10 (paramlist -> .)
    TYPE            shift and go to state 25

    paramlist                      shift and go to state 26

state 20

    (64) dlist1 -> specialvar COMMA . dlist1
    (61) dlist1 -> . NAME
    (62) dlist1 -> . NAME COMMA dlist1
    (63) dlist1 -> . specialvar
    (64) dlist1 -> . specialvar COMMA dlist1
    (65) specialvar -> . TIMES specialvar
    (66) specialvar -> . TIMES NAME

    NAME            shift and go to state 23
    TIMES           shift and go to state 11

    specialvar                     shift and go to state 21
    dlist1                         shift and go to state 27

state 21

    (63) dlist1 -> specialvar .
    (64) dlist1 -> specialvar . COMMA dlist1

    SEMICOLON       reduce using rule 63 (dlist1 -> specialvar .)
    COMMA           shift and go to state 20


state 22

    (62) dlist1 -> NAME COMMA dlist1 .

    SEMICOLON       reduce using rule 62 (dlist1 -> NAME COMMA dlist1 .)


state 23

    (61) dlist1 -> NAME .
    (62) dlist1 -> NAME . COMMA dlist1

    SEMICOLON       reduce using rule 61 (dlist1 -> NAME .)
    COMMA           shift and go to state 14


state 24

    (8) function -> TYPE NAME LPAREN paramlist . RPAREN LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN paramlist . RPAREN SEMICOLON

    RPAREN          shift and go to state 28


state 25

    (11) paramlist -> TYPE . NAME paramlist2
    (12) paramlist -> TYPE . specialvar paramlist2
    (65) specialvar -> . TIMES specialvar
    (66) specialvar -> . TIMES NAME

    NAME            shift and go to state 30
    TIMES           shift and go to state 11

    specialvar                     shift and go to state 29

state 26

    (9) function -> TYPE specialvar LPAREN paramlist . RPAREN LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN paramlist . RPAREN SEMICOLON

    RPAREN          shift and go to state 31


state 27

    (64) dlist1 -> specialvar COMMA dlist1 .

    SEMICOLON       reduce using rule 64 (dlist1 -> specialvar COMMA dlist1 .)


state 28

    (8) function -> TYPE NAME LPAREN paramlist RPAREN . LBRACE fbody RBRACE
    (6) prototype -> TYPE NAME LPAREN paramlist RPAREN . SEMICOLON

    LBRACE          shift and go to state 32
    SEMICOLON       shift and go to state 33


state 29

    (12) paramlist -> TYPE specialvar . paramlist2
    (13) paramlist2 -> .
    (14) paramlist2 -> . COMMA TYPE NAME paramlist2
    (15) paramlist2 -> . COMMA TYPE specialvar paramlist2

    RPAREN          reduce using rule 13 (paramlist2 -> .)
    COMMA           shift and go to state 34

    paramlist2                     shift and go to state 35

state 30

    (11) paramlist -> TYPE NAME . paramlist2
    (13) paramlist2 -> .
    (14) paramlist2 -> . COMMA TYPE NAME paramlist2
    (15) paramlist2 -> . COMMA TYPE specialvar paramlist2

    RPAREN          reduce using rule 13 (paramlist2 -> .)
    COMMA           shift and go to state 34

    paramlist2                     shift and go to state 36

state 31

    (9) function -> TYPE specialvar LPAREN paramlist RPAREN . LBRACE fbody RBRACE
    (7) prototype -> TYPE specialvar LPAREN paramlist RPAREN . SEMICOLON

    LBRACE          shift and go to state 37
    SEMICOLON       shift and go to state 38


state 32

    (8) function -> TYPE NAME LPAREN paramlist RPAREN LBRACE . fbody RBRACE
    (16) fbody -> . allstatement fbody
    (17) fbody -> .
    (18) allstatement -> . statement
    (19) allstatement -> . unmatchedstatement
    (20) statement -> . assignment
    (21) statement -> . declaration
    (22) statement -> . whileblock
    (23) statement -> . ifblock
    (24) statement -> . returnstatement
    (25) statement -> . functioncall SEMICOLON
    (31) statement -> . SEMICOLON
    (32) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (33) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (34) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (35) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (67) assignment -> . assignment_base SEMICOLON
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (40) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (36) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (37) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (38) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (39) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (26) returnstatement -> . RETURN expression SEMICOLON
    (27) returnstatement -> . RETURN SEMICOLON
    (28) functioncall -> . NAME LPAREN arguments RPAREN
    (68) assignment_base -> . TIMES pointervar EQUALS expression
    (69) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 17 (fbody -> .)
    SEMICOLON       shift and go to state 42
    IF              shift and go to state 52
    TYPE            shift and go to state 56
    WHILE           shift and go to state 40
    RETURN          shift and go to state 39
    NAME            shift and go to state 53
    TIMES           shift and go to state 50

    unmatchedstatement             shift and go to state 41
    assignment                     shift and go to state 48
    declaration                    shift and go to state 49
    whileblock                     shift and go to state 43
    ifblock                        shift and go to state 44
    allstatement                   shift and go to state 54
    statement                      shift and go to state 45
    fbody                          shift and go to state 51
    functioncall                   shift and go to state 46
    returnstatement                shift and go to state 55
    assignment_base                shift and go to state 47

state 33

    (6) prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON .

    TYPE            reduce using rule 6 (prototype -> TYPE NAME LPAREN paramlist RPAREN SEMICOLON .)


state 34

    (14) paramlist2 -> COMMA . TYPE NAME paramlist2
    (15) paramlist2 -> COMMA . TYPE specialvar paramlist2

    TYPE            shift and go to state 57


state 35

    (12) paramlist -> TYPE specialvar paramlist2 .

    RPAREN          reduce using rule 12 (paramlist -> TYPE specialvar paramlist2 .)


state 36

    (11) paramlist -> TYPE NAME paramlist2 .

    RPAREN          reduce using rule 11 (paramlist -> TYPE NAME paramlist2 .)


state 37

    (9) function -> TYPE specialvar LPAREN paramlist RPAREN LBRACE . fbody RBRACE
    (16) fbody -> . allstatement fbody
    (17) fbody -> .
    (18) allstatement -> . statement
    (19) allstatement -> . unmatchedstatement
    (20) statement -> . assignment
    (21) statement -> . declaration
    (22) statement -> . whileblock
    (23) statement -> . ifblock
    (24) statement -> . returnstatement
    (25) statement -> . functioncall SEMICOLON
    (31) statement -> . SEMICOLON
    (32) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (33) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (34) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (35) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (67) assignment -> . assignment_base SEMICOLON
    (60) declaration -> . TYPE dlist1 SEMICOLON
    (40) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (36) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (37) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (38) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (39) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (26) returnstatement -> . RETURN expression SEMICOLON
    (27) returnstatement -> . RETURN SEMICOLON
    (28) functioncall -> . NAME LPAREN arguments RPAREN
    (68) assignment_base -> . TIMES pointervar EQUALS expression
    (69) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 17 (fbody -> .)
    SEMICOLON       shift and go to state 42
    IF              shift and go to state 52
    TYPE            shift and go to state 56
    WHILE           shift and go to state 40
    RETURN          shift and go to state 39
    NAME            shift and go to state 53
    TIMES           shift and go to state 50

    unmatchedstatement             shift and go to state 41
    assignment_base                shift and go to state 47
    assignment                     shift and go to state 48
    declaration                    shift and go to state 49
    whileblock                     shift and go to state 43
    ifblock                        shift and go to state 44
    allstatement                   shift and go to state 54
    statement                      shift and go to state 45
    fbody                          shift and go to state 58
    functioncall                   shift and go to state 46
    returnstatement                shift and go to state 55

state 38

    (7) prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON .

    TYPE            reduce using rule 7 (prototype -> TYPE specialvar LPAREN paramlist RPAREN SEMICOLON .)


state 39

    (26) returnstatement -> RETURN . expression SEMICOLON
    (27) returnstatement -> RETURN . SEMICOLON
    (70) expression -> . functioncall
    (71) expression -> . expression PLUS expression
    (72) expression -> . expression MINUS expression
    (73) expression -> . expression DIVIDE expression
    (74) expression -> . expression TIMES expression
    (75) expression -> . MINUS expression
    (76) expression -> . LPAREN expression RPAREN
    (77) expression -> . allnumbers
    (80) expression -> . pointervar
    (28) functioncall -> . NAME LPAREN arguments RPAREN
    (78) allnumbers -> . FLOAT
    (79) allnumbers -> . NUMBER
    (81) pointervar -> . TIMES pointervar
    (82) pointervar -> . ADDROF pointervar
    (83) pointervar -> . NAME

    SEMICOLON       shift and go to state 60
    MINUS           shift and go to state 70
    LPAREN          shift and go to state 68
    NAME            shift and go to state 61
    FLOAT           shift and go to state 59
    NUMBER          shift and go to state 65
    TIMES           shift and go to state 66
    ADDROF          shift and go to state 62

    functioncall                   shift and go to state 67
    pointervar                     shift and go to state 64
    allnumbers                     shift and go to state 63
    expression                     shift and go to state 69

state 40

    (40) whileblock -> WHILE . LPAREN conditional RPAREN LBRACE fbody RBRACE

    LPAREN          shift and go to state 71


state 41

    (19) allstatement -> unmatchedstatement .

    SEMICOLON       reduce using rule 19 (allstatement -> unmatchedstatement .)
    IF              reduce using rule 19 (allstatement -> unmatchedstatement .)
    TYPE            reduce using rule 19 (allstatement -> unmatchedstatement .)
    WHILE           reduce using rule 19 (allstatement -> unmatchedstatement .)
    RETURN          reduce using rule 19 (allstatement -> unmatchedstatement .)
    NAME            reduce using rule 19 (allstatement -> unmatchedstatement .)
    TIMES           reduce using rule 19 (allstatement -> unmatchedstatement .)
    RBRACE          reduce using rule 19 (allstatement -> unmatchedstatement .)


state 42

    (31) statement -> SEMICOLON .

    SEMICOLON       reduce using rule 31 (statement -> SEMICOLON .)
    IF              reduce using rule 31 (statement -> SEMICOLON .)
    TYPE            reduce using rule 31 (statement -> SEMICOLON .)
    WHILE           reduce using rule 31 (statement -> SEMICOLON .)
    RETURN          reduce using rule 31 (statement -> SEMICOLON .)
    NAME            reduce using rule 31 (statement -> SEMICOLON .)
    TIMES           reduce using rule 31 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 31 (statement -> SEMICOLON .)
    ELSE            reduce using rule 31 (statement -> SEMICOLON .)


state 43

    (22) statement -> whileblock .

    SEMICOLON       reduce using rule 22 (statement -> whileblock .)
    IF              reduce using rule 22 (statement -> whileblock .)
    TYPE            reduce using rule 22 (statement -> whileblock .)
    WHILE           reduce using rule 22 (statement -> whileblock .)
    RETURN          reduce using rule 22 (statement -> whileblock .)
    NAME            reduce using rule 22 (statement -> whileblock .)
    TIMES           reduce using rule 22 (statement -> whileblock .)
    RBRACE          reduce using rule 22 (statement -> whileblock .)
    ELSE            reduce using rule 22 (statement -> whileblock .)


state 44

    (23) statement -> ifblock .

    SEMICOLON       reduce using rule 23 (statement -> ifblock .)
    IF              reduce using rule 23 (statement -> ifblock .)
    TYPE            reduce using rule 23 (statement -> ifblock .)
    WHILE           reduce using rule 23 (statement -> ifblock .)
    RETURN          reduce using rule 23 (statement -> ifblock .)
    NAME            reduce using rule 23 (statement -> ifblock .)
    TIMES           reduce using rule 23 (statement -> ifblock .)
    RBRACE          reduce using rule 23 (statement -> ifblock .)
    ELSE            reduce using rule 23 (statement -> ifblock .)


state 45

    (18) allstatement -> statement .

    SEMICOLON       reduce using rule 18 (allstatement -> statement .)
    IF              reduce using rule 18 (allstatement -> statement .)
    TYPE            reduce using rule 18 (allstatement -> statement .)
    WHILE           reduce using rule 18 (allstatement -> statement .)
    RETURN          reduce using rule 18 (allstatement -> statement .)
    NAME            reduce using rule 18 (allstatement -> statement .)
    TIMES           reduce using rule 18 (allstatement -> statement .)
    RBRACE          reduce using rule 18 (allstatement -> statement .)


state 46

    (25) statement -> functioncall . SEMICOLON

    SEMICOLON       shift and go to state 72


state 47

    (67) assignment -> assignment_base . SEMICOLON

    SEMICOLON       shift and go to state 73


state 48

    (20) statement -> assignment .

    SEMICOLON       reduce using rule 20 (statement -> assignment .)
    IF              reduce using rule 20 (statement -> assignment .)
    TYPE            reduce using rule 20 (statement -> assignment .)
    WHILE           reduce using rule 20 (statement -> assignment .)
    RETURN          reduce using rule 20 (statement -> assignment .)
    NAME            reduce using rule 20 (statement -> assignment .)
    TIMES           reduce using rule 20 (statement -> assignment .)
    RBRACE          reduce using rule 20 (statement -> assignment .)
    ELSE            reduce using rule 20 (statement -> assignment .)


state 49

    (21) statement -> declaration .

    SEMICOLON       reduce using rule 21 (statement -> declaration .)
    IF              reduce using rule 21 (statement -> declaration .)
    TYPE            reduce using rule 21 (statement -> declaration .)
    WHILE           reduce using rule 21 (statement -> declaration .)
    RETURN          reduce using rule 21 (statement -> declaration .)
    NAME            reduce using rule 21 (statement -> declaration .)
    TIMES           reduce using rule 21 (statement -> declaration .)
    RBRACE          reduce using rule 21 (statement -> declaration .)
    ELSE            reduce using rule 21 (statement -> declaration .)


state 50

    (68) assignment_base -> TIMES . pointervar EQUALS expression
    (81) pointervar -> . TIMES pointervar
    (82) pointervar -> . ADDROF pointervar
    (83) pointervar -> . NAME

    TIMES           shift and go to state 66
    ADDROF          shift and go to state 62
    NAME            shift and go to state 74

    pointervar                     shift and go to state 75

state 51

    (8) function -> TYPE NAME LPAREN paramlist RPAREN LBRACE fbody . RBRACE

    RBRACE          shift and go to state 76


state 52

    (32) unmatchedstatement -> IF . LPAREN conditional RPAREN allstatement
    (33) unmatchedstatement -> IF . LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (34) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (35) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE
    (36) ifblock -> IF . LPAREN conditional RPAREN statement ELSE statement
    (37) ifblock -> IF . LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (38) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (39) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement

    LPAREN          shift and go to state 77


state 53

    (28) functioncall -> NAME . LPAREN arguments RPAREN
    (69) assignment_base -> NAME . EQUALS expression

    LPAREN          shift and go to state 79
    EQUALS          shift and go to state 78


state 54
